# my_hw

./: .gitignore  READMY.md  main.py  pyproject.toml  tests_main.py
src/: main.py
tests/: test_main.py
